SynProdGITV1/force-app/main/default/objects/Opportunity_Competitors__c/Opportunity_Competitors__c.object-meta.xml
<CustomObject>
    <description>Relationship object to store the competitors linked to the opportunity.</description>
    <label>Opportunity Competitor</label>
    <nameField>
        <displayFormat>OC-{0000000}</displayFormat>
        <label>Opportunity Competitors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>