SynProdGITV1/force-app/main/default/objects/Opportunity_Competitors__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Is_Competitor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Competitors</relationshipLabel>
    <relationshipName>Opportunity_Competitors</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>