SynProdGITV1/force-app/main/default/objects/Opportunity_Competitors__c/fields/Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product__c</fullName>
    <label>Competitor Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>