SynProdGITV1/force-app/main/default/objects/Opportunity_Competitors__c/fields/Opportunity_Competitor_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Competitor_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Opportunity Competitor External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>